[gd_scene load_steps=2 format=2]

[ext_resource path="res://person.gd" type="Script" id=1]

[node name="person" type="Area2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 0 )

[node name="Polygon2D" type="Polygon2D" parent="."]
antialiased = true
polygon = PoolVector2Array( -64, 0, 0, -64, 64, 0, 0, 64 )

[node name="Faces" type="Node2D" parent="."]

[node name="Mary" type="Node2D" parent="Faces"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Faces/Mary"]
position = Vector2( 0, 8 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -24, -24, -24, -16, -16, -8, -24, -8, -24, -16, -24 )

[node name="Polygon2D2" type="Polygon2D" parent="Faces/Mary"]
position = Vector2( 32, 8 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -24, -24, -24, -16, -16, -8, -24, -8, -24, -16, -24 )

[node name="Polygon2D3" type="Polygon2D" parent="Faces/Mary"]
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, 16, 0, 16, 16, 16, 24, 24, 24, 32, 16, 24, 0, 24, -16, 24, -24, 32, -24, 24 )

[node name="Alex" type="Node2D" parent="Faces"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Faces/Alex"]
position = Vector2( 0, 10 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -32, -16, -26, -24, -24, -16, -16, -8, -24, -8, -24 )

[node name="Polygon2D2" type="Polygon2D" parent="Faces/Alex"]
position = Vector2( 32, 10 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -32, -16, -26, -24, -24, -16, -16, -8, -24, -8, -24 )

[node name="Polygon2D3" type="Polygon2D" parent="Faces/Alex"]
position = Vector2( 0, 8 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, 16, 16, 16, 24, 8, 24, 16, 16, 24, -16, 24, -24, 16, -24, 8 )

[node name="Alison" type="Node2D" parent="Faces"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Faces/Alison"]
position = Vector2( 8, 8 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -24, -24, -24, -24, -16, -16, -16, -16, -24, -16, -24 )

[node name="Polygon2D2" type="Polygon2D" parent="Faces/Alison"]
position = Vector2( 32, 8 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -24, -24, -24, -24, -16, -16, -16, -16, -24 )

[node name="Polygon2D3" type="Polygon2D" parent="Faces/Alison"]
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, 16, 16, 16, 16, 16, 16, 24, -16, 24, -24, 16 )

[node name="Polygon2D4" type="Polygon2D" parent="Faces/Alison"]
position = Vector2( 40, 0 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -24, -24, -16, -16, -16, -24, -24, -32 )

[node name="Polygon2D5" type="Polygon2D" parent="Faces/Alison"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -24, -16, -16, -24, -16, -32, -24, -24 )

[node name="Emily" type="Node2D" parent="Faces"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Faces/Emily"]
position = Vector2( 0, 8 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -32, -24, -24, -16, -24, -8, -24, -8, -24, -16, -32 )

[node name="Polygon2D2" type="Polygon2D" parent="Faces/Emily"]
position = Vector2( 32, 8 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -32, -24, -24, -16, -24, -8, -24, -8, -24, -16, -32 )

[node name="Polygon2D3" type="Polygon2D" parent="Faces/Emily"]
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, 16, 16, 16, 24, 16, 16, 24, -16, 24, -24, 16 )

[node name="Nelly" type="Node2D" parent="Faces"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Faces/Nelly"]
position = Vector2( 0, 8 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -32, -24, -24, -16, -16, -8, -24, -8, -24, -16, -24 )

[node name="Polygon2D2" type="Polygon2D" parent="Faces/Nelly"]
position = Vector2( 32, 8 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, -32, -24, -24, -16, -16, -8, -24, -8, -24, -16, -24 )

[node name="Polygon2D3" type="Polygon2D" parent="Faces/Nelly"]
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -16, 16, 16, 16, 24, 24, 24, 32, 16, 24, -16, 24, -24, 16 )

[node name="Unavailable" type="Node2D" parent="Faces"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Faces/Unavailable"]
position = Vector2( 0, 8 )
color = Color( 0.611765, 0.611765, 0.611765, 1 )
polygon = PoolVector2Array( -24, -24, -16, -32, 0, -16, 16, -32, 24, -24, 8, -8, 24, 8, 16, 16, 0, 0, -16, 16, -24, 8, -8, -8 )

[connection signal="input_event" from="." to="." method="_on_person_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_person_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_person_mouse_exited"]
